Removed -webkit-overflow-scrolling style due to bug related to -webkit-overflow-scrolling in N.grid column fix.

--- a/css/natural.ui.css
+++ b/css/natural.ui.css
@@ -719,7 +719,7 @@ a.btn_mouseout__, input[type='button'].btn_mouseout__, button.btn_mouseout__ {
 
 /* Grid - Column fixed */
 .grid_container__ > .grid_wrap__ {
-	-webkit-overflow-scrolling: touch;
+	/* -webkit-overflow-scrolling: touch; */
 }
 
 /* Details popup */
